WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
142802
[WK2] We should not even try the network cache for non-HTTP protocol requests
https://bugs.webkit.org/show_bug.cgi?id=142802
Summary
[WK2] We should not even try the network cache for non-HTTP protocol requests
Chris Dumez
Reported
2015-03-17 17:11:05 PDT
We should not even try the network cache for non-HTTP protocol requests. Radar: <
rdar://problem/19632130
>
Attachments
Patch
(4.50 KB, patch)
2015-03-17 17:20 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2015-03-17 17:20:49 PDT
Created
attachment 248888
[details]
Patch
WebKit Commit Bot
Comment 2
2015-03-18 00:27:03 PDT
Comment on
attachment 248888
[details]
Patch Clearing flags on attachment: 248888 Committed
r181688
: <
http://trac.webkit.org/changeset/181688
>
WebKit Commit Bot
Comment 3
2015-03-18 00:27:09 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug