[WK2] We should not even try the network cache for non-HTTP protocol requests https://bugs.webkit.org/show_bug.cgi?id=142802 <rdar://problem/19632130>

Reviewed by Antti Koivisto.

We should not even try the network cache for non-HTTP protocol requests
and the network cache cannot handle those.

* NetworkProcess/NetworkResourceLoader.cpp:
(WebKit::NetworkResourceLoader::start):
* NetworkProcess/cache/NetworkCache.cpp:
(WebKit::NetworkCache::canRetrieve):
(WebKit::NetworkCache::Cache::retrieve):
* NetworkProcess/cache/NetworkCache.h:
* NetworkProcess/cache/NetworkCacheStatisticsCocoa.mm:
(WebKit::NetworkCache::retrieveDecisionToDiagnosticKey):


Canonical link: https://commits.webkit.org/160841@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181688 268f45cc-cd09-0410-ab3c-d52691b4dbfc