Source/WebKit2/NetworkProcess/cache/NetworkCache.h
@@ -66,7 +66,6 @@ struct Entry {
 
 enum class RetrieveDecision {
     Yes,
-    NoDueToProtocol,
     NoDueToHTTPMethod,
     NoDueToConditionalRequest,
     NoDueToReloadIgnoringCache
